--- a/html/form-test/index 2.html
+++ b/html/form-test/index 2.html
@@ -133,6 +133,8 @@
 	[Upload]<br>
 	Deadline<br>
 	_________<br>-->
+	Reference Materials (Please Upload multiple files as .zip)<br>
+	<input type="file" name="file" id="file"><br><br>
 	Description/Copy for Graphic:<br>
 	<textarea name="description"></textarea><br>
 	<br>
