--- a/html/form-test/index.html
+++ b/html/form-test/index.html
@@ -19,6 +19,7 @@
 			margin-right: auto;
 			padding: 25px;
 			background-color: #FFFFFF;
+			border-radius: 8px;
 		}
 		.button {
 			display: inline-block;
