--- a/html/form-test/index 2.html
+++ b/html/form-test/index 2.html
@@ -48,7 +48,7 @@
 <body>
 
 	<!-- Start code for the form-->
-	<form class="graphics_form" method="post" name="myemailform" action="form-to-email-swift.php" enctype="multipart/form-data">
+	<form class="graphics_form" method="post" name="myemailform" action="form-to-email.php" enctype="multipart/form-data">
 	<!-- <p>
 		<label for='name'>Enter Name: </label><br>
 		<input type="text" name="name">
