--- a/html/form-test/index.html
+++ b/html/form-test/index.html
@@ -34,6 +34,26 @@
 			font-size: 18px;
 
 		}
+		#overlay {
+			position: absolute;
+			left: 0;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			background: #000;
+			opacity: 0.8;
+			filter: alpha(opacity=80);
+		}
+		#loading {
+			width: 50px;
+			height: 57px;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			margin: -28px 0 0 -25px;
+		}
+
+
 		textarea{
 			width: 100%;
 			resize: vertical;
@@ -41,7 +61,8 @@
 	</style>	
 	<!-- a helper script for vaidating the form-->
 	<script language="JavaScript" src="gen_validatorv4.js"
-    type="text/javascript" xml:space="preserve"></script>
+	type="text/javascript" xml:space="preserve"></script>
+	<script src="jquery-2.2.1.min.js"></script>
 </head>
 
 
@@ -114,6 +135,34 @@
 		<option value="3">3</option>
 		<option value="4">4</option>
 		<option value="5">5</option>
+		<option value="6">6</option>
+		<option value="7">7</option>
+		<option value="8">8</option>
+		<option value="9">9</option>
+		<option value="10">10</option>
+		<option value="11">11</option>
+		<option value="12">12</option>
+		<option value="13">13</option>
+		<option value="14">14</option>
+		<option value="15">15</option>
+		<option value="16">16</option>
+		<option value="17">17</option>
+		<option value="18">18</option>
+		<option value="19">19</option>
+		<option value="20">20</option>
+		<option value="21">21</option>
+		<option value="22">22</option>
+		<option value="23">23</option>
+		<option value="24">24</option>
+		<option value="25">25</option>
+		<option value="26">26</option>
+		<option value="27">27</option>
+		<option value="28">28</option>
+		<option value="29">29</option>
+		<option value="30">30</option>
+		<option value="31">31</option>
+
+
 	</select><br><br>
 	Event Time<br>
 	<input type="text" name="event_time"><br><br>
@@ -147,7 +196,7 @@
 	<input type="text" name="deadline"><br><br>
 	<input type="checkbox" name="turnaround" value="three_weeks"> I understand that there is a *3* week turnaround for graphic requests
 	<br><br>
-	<input class="button" type="submit" name='submit' value="Submit"><br><br>
+	<input class="button" type="submit" name='submit' value="Submit" onclick="loading();"><br><br>
 	Contact Devin (trabant@usc.edu) AND Nikoli (partiyel@usc.edu) with questions.
 </form>
 <script language="JavaScript">
@@ -162,7 +211,28 @@ frmvalidator.addValidation("last_name","req","Please provide your last name");
 frmvalidator.addValidation("user_email","req","Please provide your email"); 
 frmvalidator.addValidation("user_email","email","Please enter a valid email address"); 
 frmvalidator.addValidation("event_title","req","Please provide your event title"); 
-frmvalidator.addValidation("turnaround","req","Please acknowledge the turnaround time"); 
+frmvalidator.addValidation("turnaround","shouldselchk=three_weeks","Please acknowledge the turnaround time"); 
+
+
+/*function loading() {
+        // add the overlay with loading image to the page
+        var over = '<div id="overlay">' +
+        '<img id="loading" src="http://bit.ly/pMtW1K">' +
+        '</div>';
+        $(over).appendTo('body');
+
+        // click on the overlay to remove it
+        //$('#overlay').click(function() {
+        //    $(this).remove();
+        //});
+
+        // hit escape to close the overlay
+        $(document).keyup(function(e) {
+        	if (e.which === 27) {
+        		$('#overlay').remove();
+        	}
+        });
+    };*/
 
 </script>
 <p>
