--- a/html/request-forms/graphics-form.html
+++ b/html/request-forms/graphics-form.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Graphics Request Form</title>
 	<!-- define some style elements-->
+		<link href='https://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
+
 	<style>
 		@font-face {
 			font-family: 'Geometric';
@@ -18,8 +20,8 @@
 		body{
 			margin: 0px;
 			padding: 25px;
-			background-color: #DDDDDD;
-			font-family: "Helvetica";
+			background-color: #222222;
+  font-family: "Nunito", "Helvetica";
 			font-size: 18px;
 		}
 		.graphics_form{
@@ -33,7 +35,7 @@
 		}
 		.button {
 			display: inline-block;
-			border-radius: 4px;
+			border-radius: 20px;
 			background-color: #f4511e;
 			border: none;
 			color: #FFFFFF;
