--- a/html/main/index.html
+++ b/html/main/index.html
@@ -38,7 +38,7 @@
 			<div class="container">
 
 				<nav class="navbar navbar-inverse navbar-fixed-top">
-					<a class="navbar-brand" href="#"><img src="social-media-logos/pb-logo-white.svg"></a>
+					<a class="navbar-brand" href="index.html"><img src="social-media-logos/pb-logo-white.svg"></a>
 
 					<div class="container">
 
@@ -52,15 +52,15 @@
 						</div>
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
-								<li class="active"><a href="#">Home</a></li>
+								<li class="active"><a href="index.html">Home</a></li>
 
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href="#">Program Board</a></li>
-										<li role="separator" class="divider"></li>
-										<li><a href="#">Committees</a></li>
-										<li><a href="#">Assemblies</a></li>
+										<li><a href="about.html">Program Board</a></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li><a href="committees.html">Committees</a></li>
+                                        <li><a href="assemblies.html">Assemblies</a></li>
                     <!--<li class="dropdown-header">Nav header</li>
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>-->
@@ -211,11 +211,12 @@
 
     	<!-- START THE FEATURETTES -->
 
+        </div><!-- /.container -->
 
     	<div class="row featurette pb-photo">
     		<div class="hidden-sm col-md-2"></div>
     		<div class="col-md-8 col-sm-12">
-    			<h2 class="featurette-heading">9 ASSEMBLIES,<br>5 COMMITTEES.<br><span class="text-muted">SHAPING THE UNDERGRADUATE STUDENT EXPERIENCE.</span></h2>
+    			<h2 class="featurette-heading">SHAPE THE UNDERGRADUATE STUDENT EXPERIENCE.</h2>
     			<p class="lead">From concerts to food fairs, study nights to art incubators, cultural events and more - the student leaders of Program Board have envisioned, planned, booked, and executed it all. We see our ideas become realities while striving to stimulate and enlighten university life by not only entertaining, but also raising awareness of the issues and culture that surround the greater global community.</p>
     		</div>
     		<div class="hidden-sm col-md-2"></div>
@@ -251,7 +252,6 @@
     <!-- FOOTER -->
     <footer class="footer">
     	<div class="row black">
-    		<p class="pull-right"><a href="#">Back to top</a></p>
     		<div class="col-sm-4">
     			<h3>Contact</h3>
     			<ul class="horizontal">
@@ -275,7 +275,6 @@
     			</div>
     		</footer>
 
-    	</div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
