--- a/html/main/assemblies.html
+++ b/html/main/assemblies.html
@@ -61,7 +61,7 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href="about.html">Program Board</a></li>
+										<li><a href="#">Program Board</a></li>
 										<li role="separator" class="divider"></li>
 										<li><a href="committees.html">Committees</a></li>
 										<li><a href="assemblies.html">Assemblies</a></li>
@@ -87,7 +87,7 @@
 		================================================== -->
 		<!-- Wrap the rest of the page in another container to 
 		center all the content. -->
-		<div class="row featurette speakersEvent" style="position: relative;">
+		<div class="row featurette nightMarket" style="position: relative;">
 			<div style="position: absolute; bottom: 20px;">
 				<div class="col-sm-12 col-md-8">
 					<h2 class="featurette-heading">9 ASSEMBLIES<br><span class="text-muted"></span></h2>
