--- a/html/main/committees.html
+++ b/html/main/committees.html
@@ -60,7 +60,7 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href="about.html">Program Board</a></li>
+										<li><a href="#">Program Board</a></li>
 										<li role="separator" class="divider"></li>
 										<li><a href="committees.html">Committees</a></li>
 										<li><a href="assemblies.html">Assemblies</a></li>
